src/objects/Availability__c.object
<CustomObject>
    <fields>
        <fullName>Available_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Available Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Availability</relationshipLabel>
        <relationshipName>Availability</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Forecasted_Hours__c</fullName>
        <label>Forecasted Hours</label>
        <summarizedField>Budget__c.Forecasted_Hours__c</summarizedField>
        <summaryForeignKey>Budget__c.Availability__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Hours_Worked_Rollup__c</fullName>
        <label>Hours Worked Rollup</label>
        <summarizedField>Budget__c.Hours_Worked__c</summarizedField>
        <summaryForeignKey>Budget__c.Availability__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Hours_Worked__c</fullName>
        <label>Hours Worked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Week</label>
        <referenceTo>Week__c</referenceTo>
        <relationshipLabel>Availability</relationshipLabel>
        <relationshipName>Availability</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Availability</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Week__c</columns>
        <columns>Available_Hours__c</columns>
        <columns>Hours_Worked__c</columns>
        <columns>Forecasted_Hours__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AVAIL-{0000}</displayFormat>
        <label>Availability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Availability</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>